exercises/07_capstone/00_overview/tests/fail/not_an_enum.stderr
error: StateMachine can only be derived for enums
 --> tests/fail/not_an_enum.rs:6:1
  |
6 | / struct TrafficLight {
7 | |     red: bool,
8 | | }
  | |_^
